@@ -7,5 +7,9 @@ Earlier versions of pywcs had two versions of every conversion method:
   X_fits(...) -- treats the origin of pixel coordinates at (1, 1)
 
 From version 1.3 onwards, there is only one method for each
-conversion, with an 'origin' keyword argument.  The default value is
-1, following the FITS/Fortran convention not the Numpy/C convention.
+conversion, with an 'origin' argument:
+
+  - 0: places the origin at (0, 0), which is the C/Numpy convention.
+
+  - 1: places the origin at (1, 1), which is the Fortran/FITS
+    convention.
